--- a/triangleX.html
+++ b/triangleX.html
@@ -159,7 +159,7 @@
   </div> -->
   <div class="text-center p-1 w-full max-w-6xl"></div>
     <div class="flex items-center mb-2" style="text-align: center;">
-      <img src="./TRIANGLE X 全等召喚_files/PH99mC3.png" alt="logo" width="200" height="200" class="mr-3">
+      <img src="https://i.imgur.com/PH99mC3.png" alt="logo" width="200" height="200" class="mr-3">
       <h1 class="text-4xl font-bold text-indigo-700 rgb-text" style="font-size: 48px;">TRIANGLE <span style="font-size: 70px;">X</span> 全等召喚</h1>
     </div>
     <!-- <h1 class="text-4xl font-bold mb-2 text-indigo-700"><img src="triangleX.png" alt="logo" width="50" height="50"/>Triangle X 全等召喚</h1> -->
