--- a/multipleX.html
+++ b/multipleX.html
@@ -381,7 +381,7 @@
         <!-- 遊戲進行頁面 -->
         <div id="gameScreen">
             <div class="game-header">
-                <h1 class="game-title">數字倍數判斷遊戲</h1>
+                <h1 class="game-title">倍判者聯盟</h1>
                 <div class="level-info">
                     <div class="level-badge">第<span id="currentLevel">1</span>關</div>
                     <div class="question-info">第<span id="currentQuestion">1</span>題 / 6題</div>
