--- a/addminuspromax.html
+++ b/addminuspromax.html
@@ -580,12 +580,12 @@
         // ============================================
         
         // Google Apps Script API 網址 - 請管理員在此設定
-        const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec';
+        const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzdua1guVw1KbXnV_mFvG8D4XyASMRs2yo3zfX__xVRVkUo7nOkLgZRT9JZ7bDtERa1/exec';
         
         // 系統設定
         const SYSTEM_CONFIG = {
             enableScoreUpload: true,  // 是否啟用成績上傳功能
-            schoolName: '○○國小',     // 學校名稱
+            schoolName: '東興國中',     // 學校名稱
             subject: '數學競賽',       // 科目名稱
             version: '1.0'            // 系統版本
         };
