--- a/addminuspromax.html
+++ b/addminuspromax.html
@@ -559,12 +559,12 @@
             <p class="subtitle">挑戰您的數學技能！</p>
         </div>
         
-        <div class="setup-info">
-            <h3>📊 成績自動上傳功能</h3>
-            <p>✅ 系統已配置成績上傳功能</p>
-            <p>🎯 完成競賽後，您的成績將自動記錄到系統資料庫</p>
-            <p>📈 老師可以即時查看所有學生的競賽表現</p>
-        </div>
+       // <div class="setup-info">
+          //  <h3>📊 成績自動上傳功能</h3>
+          //  <p>✅ 系統已配置成績上傳功能</p>
+          //  <p>🎯 完成競賽後，您的成績將自動記錄到系統資料庫</p>
+          //  <p>📈 老師可以即時查看所有學生的競賽表現</p>
+      //  </div>
         
         <div class="login-form">
             <div class="welcome-text">請輸入資訊開始競賽</div>
