--- a/expgame.html
+++ b/expgame.html
@@ -25,7 +25,9 @@
     </style>
 </head>
 <body class="bg-black text-white">
-    <audio id="music" loop src="https://raw.githubusercontent.com/seon0118/math/48c5cd03d773ff339ea75ce96cbe7a90f97e1638/kahoot-music-60-second-count-down-13.mp3"></audio>
+    <audio id="music1" loop src="https://raw.githubusercontent.com/seon0118/math/48c5cd03d773ff339ea75ce96cbe7a90f97e1638/kahoot-music-60-second-count-down-13.mp3"></audio>
+    <audio id="music2" loop src="https://raw.githubusercontent.com/seon0118/math/6fc3f6edc0a88679035cd41863eb8ea8d201b092/Kahoot%20Music%2060%20Second%20Count%20Down%202_3.mp3"></audio>
+    <audio id="music3" loop src="https://raw.githubusercontent.com/seon0118/math/6fc3f6edc0a88679035cd41863eb8ea8d201b092/Kahoot%20Music%20(60%20Second%20Count%20Down)%203_3%20-%20Jason%20Beauchamp%20(youtube).mp3"></audio>
 
     <div class="bg-gradient-to-r from-purple-900 via-gray-900 to-red-900 p-6 flex justify-between items-center border-b-4 border-yellow-400">
         <button id="soundBtn" class="text-4xl p-2 hover:scale-110 transition">🔊</button>
@@ -57,6 +59,7 @@
         G.timer1 = null;
         G.timer2 = null;
         G.timer3 = null;
+        G.currentMusic = null;
 
         function rand(n) { return Math.floor(Math.random() * n); }
 
@@ -287,9 +290,11 @@
             showQ(1); showQ(2);
             updateUI(1); updateUI(2);
             
-            var mus = document.getElementById('music');
-            mus.currentTime = 0;
-            mus.play().catch(function(e) { console.log(e); });
+            var musicNum = rand(3) + 1;
+            G.currentMusic = document.getElementById('music' + musicNum);
+            G.currentMusic.currentTime = 0;
+            G.currentMusic.muted = G.muted;
+            G.currentMusic.play().catch(function(e) { console.log(e); });
             
             G.timer1 = setInterval(function() {
                 G.time--;
@@ -320,14 +325,14 @@
             clearInterval(G.timer1);
             clearInterval(G.timer2);
             clearInterval(G.timer3);
-            document.getElementById('music').pause();
+            if (G.currentMusic) G.currentMusic.pause();
             G.screen = 'end';
             drawEnd();
         }
 
         document.getElementById('soundBtn').onclick = function() {
             G.muted = !G.muted;
-            document.getElementById('music').muted = G.muted;
+            if (G.currentMusic) G.currentMusic.muted = G.muted;
             this.textContent = G.muted ? '🔇' : '🔊';
         };
 
