--- a/oneone.html
+++ b/oneone.html
@@ -314,9 +314,9 @@
             questions: [
                 {
                     q: "下列哪個選項是一元一次式？",
-                    options: ["3x + 5", "x² + 2x", "2x + 3y", "5"],
+                    options: ["3x + 5", "x² + 2x", "2x + 3y", "5xy"],
                     answer: 0,
-                    explanation: "正確答案是「3x + 5」。<br><br><strong>詳解：</strong><br>• 一元一次式的條件：只有<strong>一個未知數</strong>，且未知數的<strong>最高次方是1</strong><br>• 3x + 5：只有x一個未知數，x的次方是1 ✓<br>• x² + 2x：x的次方有2，不符合 ✗<br>• 2x + 3y：有x和y兩個未知數 ✗<br>• 5：沒有未知數，是常數 ✗"
+                    explanation: "正確答案是「3x + 5」。<br><br><strong>詳解：</strong><br>• 一元一次式的條件：只有<strong>一個未知數</strong>，且未知數的<strong>最高次方是1</strong><br>• 3x + 5：只有x一個未知數，x的次方是1 ✓<br>• x² + 2x：x的次方有2，不符合 ✗<br>• 2x + 3y：有x和y兩個未知數 ✗<br>• 5xy：有x和y兩個未知數 ✗"
                 },
                 {
                     q: "下列哪個選項是一元一次式？",
