--- a/oneone.html
+++ b/oneone.html
@@ -344,9 +344,9 @@
                 },
                 {
                     q: "下列哪個選項是一元一次式？",
-                    options: ["(x+1)(x-1)", "10", "6x + 2", "x² - x²"],
+                    options: ["(x+1)(x-1)", "10yz", "6x + 2", "x² - x²"],
                     answer: 2,
-                    explanation: "正確答案是「6x + 2」。<br><br><strong>詳解：</strong><br>• 6x + 2：只有x，次方是1 ✓<br>• (x+1)(x-1) = x² - 1：展開後有x²項 ✗<br>• 10：沒有未知數，是常數 ✗<br>• x² - x² = 0：雖然化簡後x²項消失，但原式不是一元一次式 ✗"
+                    explanation: "正確答案是「6x + 2」。<br><br><strong>詳解：</strong><br>• 6x + 2：只有x，次方是1 ✓<br>• (x+1)(x-1) = x² - 1：展開後有x²項 ✗<br>• 10yz：有y和z兩個未知數 ✗<br>• x² - x² = 0：雖然化簡後x²項消失，但原式不是一元一次式 ✗"
                 }
             ]
         },
