Change default password and update placeholder text

--- a/mariopro.html
+++ b/mariopro.html
@@ -150,7 +150,7 @@
 
             <div id="form-teacher" style="display:none;">
                 <input type="text" id="t-code" placeholder="設定教室代碼" onkeyup="this.value = this.value.toUpperCase();">
-                <input type="password" id="t-pass" placeholder="輸入密碼 (8888)">
+                <input type="password" id="t-pass" placeholder="輸入密碼">
                 <div style="display:flex; align-items:center; justify-content:center; margin-top:10px;">
                     <label style="font-size:12px; margin-right:10px;">人數上限:</label>
                     <input type="number" id="t-limit" value="35" min="1" max="35" style="width:60px;">
@@ -320,7 +320,7 @@
         const pass = document.getElementById('t-pass').value.trim();
         maxSeats = parseInt(document.getElementById('t-limit').value);
         if (!code) return alert("請設定代碼");
-        if (pass !== "8888") return alert("密碼錯誤 (預設 8888)");
+        if (pass !== "0118") return alert("密碼錯誤");
 
         myRole = 'teacher'; classCode = code;
         document.getElementById('login-screen').style.display = 'none';
